k8s/apps/slskd/statefulset_agent.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slskd
      relay: agent
  template:
    metadata:
      labels:
        app: slskd
        relay: agent
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsGroup: 995
        fsGroup: 995
      containers:
      - name: slskd
        image: slskd
        command:
        - /slskd/slskd
        ports:
        - containerPort: 5030
        volumeMounts:
        - name: srv
          subPath: slskd
          mountPath: /srv/Music
          readOnly: true
          recursiveReadOnly: IfPossible
        - name: config
          mountPath: /config
        - name: data
          mountPath: /app/data
        securityContext:
          runAsUser: 65534
          capabilities:
            drop:
            - ALL
      volumes:
      - name: srv
        persistentVolumeClaim:
          claimName: srv
      - name: config
        configMap:
          name: slskd
      - name: apk-cache
        persistentVolumeClaim:
          claimName: apk-cache
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      storageClassName: local-path
      accessModes:
      - ReadWriteOncePod
      resources:
        requests:
          storage: 8Mi
