k8s/apps/slskd/statefulset_controller.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slskd
      relay: controller
  template:
    metadata:
      annotations:
        devices.crio.io: /dev/net/tun
      labels:
        app: slskd
        relay: controller
        frontend: "true"
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsGroup: 995
        fsGroup: 995
      containers:
      - name: slskd
        image: slskd
        command:
        - /bin/sh
        - -c
        - 'umask 002 && exec /slskd/slskd'
        ports:
        - containerPort: 5030
        volumeMounts:
        - name: srv
          subPath: downloads
          mountPath: /srv/downloads
        - name: config
          mountPath: /config
        - name: data
          mountPath: /app/data
        securityContext:
          runAsUser: 65534
          capabilities:
            drop:
            - ALL
      volumes:
      - name: srv
        persistentVolumeClaim:
          claimName: srv
      - name: config
        configMap:
          name: slskd
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      storageClassName: local-path
      accessModes:
      - ReadWriteOncePod
      resources:
        requests:
          storage: 8Mi
