k8s/apps/slskd/svc_controller.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: controller
spec:
  ports:
  - port: 5030
  selector:
    app: slskd
    relay: controller
