k8s/apps/slskd/svc_frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
  - port: 80
    targetPort: 5030
  selector:
    app: slskd
    frontend: "true"
